# AutoScout

./: .gitignore  CLAUDE.md  README.md  install_playwright_deps.sh  pyproject.toml
autoscout/: README.md
autoscout/docs/: research.md
config/: eval-output-schema.json  evaluation.json  prompt.md  scoring.json  search.json
docs/: plan.md  research.md
docs/reference-data/: aggregate-report.md  run_model_comparison.py
docs/reference-data/3872109/: listing.json
docs/reference-data/4272435/: commentary.md  listing.json
docs/reference-data/4280612/: commentary.md  listing.json
docs/reference-data/4280818/: listing.json
docs/reference-data/4281378/: commentary.md
reference-data/: aggregate-report.md
reference-data/3872109/: commentary.md
reference-data/3872109/haiku/: evaluation.json
reference-data/3872109/opus/: evaluation.json
reference-data/4272435/opus/: evaluation.json
reference-data/4280612/: commentary.md
reference-data/4280612/haiku/: evaluation.json
reference-data/4280612/opus/: evaluation.json
reference-data/4280612/sonnet/: evaluation.json
reference-data/4280818/: commentary.md
reference-data/4281217/: commentary.md  listing.json
reference-data/4281378/: commentary.md  listing.json
scripts/: evaluate_listing.py  pipeline.py  run_model_comparison.py
scripts/discovery/: README.md  discover_params.py  test_url_params.py  url_test_results.json
src/autoscout/: config.py  evaluator.py  models.py  parser.py  scraper.py
tests/: conftest.py  test_parser.py  test_scraper.py  test_scraper_validation.py
(+12 files in other folders)
